fix(feat): fix animation scale box on Firefox

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -260,7 +260,7 @@ footer {
 
   .tile_menu {
     line-height: 3rem;
-    font-size: 1.6rem;
+    font-size: 1.4rem;
   }
   
   .tile_menu p {
